--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "build": "remix build",
-    "deploy": "wrangler publish",
+    "build": "pnpm build:css && pnpm build:remix",
+    "build:remix": "remix build",
+    "build:css": "tailwindcss -m -i app/styles/app.css -o app/styles/generated.css",
+    "deploy": "pnpm build && wrangler publish",
     "dev:remix": "remix watch",
     "dev:miniflare": "cross-env NODE_ENV=development miniflare ./build/index.js --watch",
+    "dev:css": "tailwindcss -w -i app/styles/app.css -o app/styles/generated.css",
     "dev": "remix build && run-p \"dev:*\"",
     "start": "cross-env NODE_ENV=production miniflare ./build/index.js"
   },
@@ -23,9 +26,13 @@
     "@remix-run/eslint-config": "^1.7.4",
     "@types/react": "^17.0.47",
     "@types/react-dom": "^17.0.17",
+    "autoprefixer": "^10.4.13",
+    "concurrently": "^7.5.0",
     "eslint": "^8.23.1",
     "miniflare": "^2.6.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1",
     "typescript": "^4.7.4",
     "wrangler": "^2.0.22"
   },
