--- a/package.json
+++ b/package.json
@@ -10,31 +10,35 @@
     "dev:miniflare": "cross-env NODE_ENV=development miniflare ./build/index.js --watch",
     "dev:css": "tailwindcss -w -i app/styles/app.css -o app/styles/generated.css",
     "dev": "remix build && run-p \"dev:*\"",
-    "start": "cross-env NODE_ENV=production miniflare ./build/index.js"
+    "start": "cross-env NODE_ENV=production miniflare ./build/index.js",
+    "api:build": "aspida"
   },
   "dependencies": {
-    "@remix-run/cloudflare": "^1.7.4",
-    "@remix-run/cloudflare-workers": "^1.7.4",
-    "@remix-run/react": "^1.7.4",
-    "cross-env": "^7.0.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "@aspida/fetch": "1.11.0",
+    "@remix-run/cloudflare": "1.7.4",
+    "@remix-run/cloudflare-workers": "1.7.4",
+    "@remix-run/react": "1.7.4",
+    "aspida": "1.11.0",
+    "cross-env": "7.0.3",
+    "microcms-js-sdk": "2.3.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^3.14.1",
-    "@remix-run/dev": "^1.7.4",
-    "@remix-run/eslint-config": "^1.7.4",
-    "@types/react": "^17.0.47",
-    "@types/react-dom": "^17.0.17",
-    "autoprefixer": "^10.4.13",
-    "concurrently": "^7.5.0",
-    "eslint": "^8.23.1",
-    "miniflare": "^2.6.0",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.1",
-    "typescript": "^4.7.4",
-    "wrangler": "^2.0.22"
+    "@cloudflare/workers-types": "3.18.0",
+    "@remix-run/dev": "1.7.4",
+    "@remix-run/eslint-config": "1.7.4",
+    "@types/react": "18.0.24",
+    "@types/react-dom": "18.0.8",
+    "autoprefixer": "10.4.13",
+    "concurrently": "7.5.0",
+    "eslint": "8.26.0",
+    "miniflare": "2.11.0",
+    "npm-run-all": "4.1.5",
+    "postcss": "8.4.18",
+    "tailwindcss": "3.2.1",
+    "typescript": "4.8.4",
+    "wrangler": "2.1.14"
   },
   "engines": {
     "node": ">=16.13"
