--- a/package.json
+++ b/package.json
@@ -2,13 +2,10 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "build": "pnpm build:css && pnpm build:remix",
-    "build:remix": "remix build",
-    "build:css": "tailwindcss -m -i app/styles/app.css -o app/styles/generated.css",
+    "build": "remix build",
     "deploy": "pnpm build && wrangler publish",
     "dev:remix": "remix watch",
     "dev:miniflare": "cross-env NODE_ENV=development miniflare ./build/index.js --watch",
-    "dev:css": "tailwindcss -w -i app/styles/app.css -o app/styles/generated.css",
     "dev": "remix build && run-p \"dev:*\"",
     "start": "cross-env NODE_ENV=production miniflare ./build/index.js",
     "api:build": "aspida"
@@ -30,13 +27,9 @@
     "@remix-run/eslint-config": "1.7.4",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
-    "autoprefixer": "10.4.13",
-    "concurrently": "7.5.0",
     "eslint": "8.26.0",
     "miniflare": "2.11.0",
     "npm-run-all": "4.1.5",
-    "postcss": "8.4.18",
-    "tailwindcss": "3.2.1",
     "typescript": "4.8.4",
     "wrangler": "2.1.14"
   },
