--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "cross-env": "7.0.3",
     "microcms-js-sdk": "2.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "3.18.0",
@@ -30,6 +31,7 @@
     "@remix-run/eslint-config": "1.7.4",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
+    "@types/xml2js": "^0.4.11",
     "autoprefixer": "10.4.13",
     "concurrently": "7.5.0",
     "eslint": "8.26.0",
