--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
+    "prepare": "git config --local core.hooksPath .githooks",
     "build": "pnpm build:css && pnpm build:remix",
     "build:remix": "remix build",
     "build:css": "tailwindcss -m -i app/styles/app.css -o app/styles/generated.css",
@@ -11,7 +12,9 @@
     "dev:css": "tailwindcss -w -i app/styles/app.css -o app/styles/generated.css",
     "dev": "pnpm run build && run-p \"dev:*\"",
     "start": "cross-env NODE_ENV=production miniflare ./build/index.js",
-    "api:build": "aspida"
+    "api:build": "aspida",
+    "lint": "eslint app --fix --ext ts,tsx",
+    "format": "rome format app --write"
   },
   "dependencies": {
     "@aspida/fetch": "1.11.0",
@@ -23,7 +26,7 @@
     "microcms-js-sdk": "2.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "xml2js": "^0.4.23"
+    "xml2js": "0.4.23"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "3.18.0",
@@ -31,16 +34,21 @@
     "@remix-run/eslint-config": "1.7.4",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
-    "@types/xml2js": "^0.4.11",
+    "@types/xml2js": "0.4.11",
     "autoprefixer": "10.4.13",
     "concurrently": "7.5.0",
     "eslint": "8.26.0",
+    "eslint-plugin-react": "7.31.11",
+    "lint-staged": "13.0.3",
     "miniflare": "2.11.0",
     "npm-run-all": "4.1.5",
     "postcss": "8.4.18",
+    "rome": "10.0.1",
     "tailwindcss": "3.2.1",
     "typescript": "4.8.4",
-    "wrangler": "2.1.14"
+    "webpack": "5.75.0",
+    "wrangler": "2.1.14",
+    "xo": "0.53.1"
   },
   "engines": {
     "node": ">=16.13"
