--- a/e2e.yaml
+++ b/e2e.yaml
@@ -5,4 +5,6 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.e2e
+    ports:
+      - 8787:8787
     command: pnpm run build & pnpm run start
